--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
 .App {
-  text-align: center;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Home {
+background-color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.content {
+	width: 80%;
+	margin: 0 auto;
+	padding-top: 2em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.dog {
+	padding: 3em;
+	background: rgb(221, 135, 149);
+	display: flex;
+	flex-direction: column;
+	align-items: center; 
+	justify-content: center; 
+	color: white;
+}
+
+.character-button {
+	padding: 15px 2rem;
+	border: none;
+	background: #7e2556;;
+	color: white;
+	border-radius: 5px;
+}
+
+.character-button:hover {
+	cursor: pointer;
+	background: #a01561;
+}
+
+.character-button:focus {
+	border: none;
+	outline: none;
+}
+
+.character-text {
+	width: 70%;
+}
+
+nav {
+	display: flex;
+	justify-content: space-between;
+	background: rgb(61, 5, 44);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+nav h3 {
+  justify-content: space-between;
+  padding: 1em
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav ul {
+	display: flex;
+	list-style-type: none;
+	align-items: center;
 }
+
+nav ul li {
+	margin: 0 2em;
+}
+
+nav ul a {
+	text-decoration: none;
+	color: white;
+}
+
+
